色々プラスしてます

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,16 @@
         <a href="index.html#contact">CONTACT</a>
       </nav>
     </header>
+    <h3 class="py-8 text-7xl font-bold underline">Hello world!</h3>
+
+    <button
+      class="bg-sky-700 px-4 py-2 text-yellow-200 hover:bg-sky-800 sm:px-8 sm:py-3"
+    >
+      こんにちは今日は猫です
+    </button>
+    <div class="my-10 bg-red-500 text-white">
+      Tailwindcssは動いているようです。VScode上でも勝手にタブ空きなどコードを直してくれてる感じです。
+    </div>
     <section id="aboutus"></section>
   </body>
 </html>
