--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,8 @@
       name="description"
       content="SocialTechはEdTech業界のリーディングカンパニーを目指します。"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style2.css" />
+
     <title>SocialTech</title>
   </head>
   <body>
@@ -25,16 +26,127 @@
         <a href="index.html#contact">CONTACT</a>
       </nav>
     </header>
-    <h3 class="py-8 text-7xl font-bold underline">Hello world!</h3>
-
-    <button
-      class="bg-sky-700 px-4 py-2 text-yellow-200 hover:bg-sky-800 sm:px-8 sm:py-3"
-    >
-      こんにちは今日は猫です
-    </button>
-    <div class="my-10 bg-red-500 text-white">
-      Tailwindcssは動いているようです。VScode上でも勝手にタブ空きなどコードを直してくれてる感じです。
-    </div>
+    <main>
+      <article>
+        <!-- メインビジュアル -->
+        <section class="main-visual">
+          <div class="main-message">
+            <h1>WORLD PEACE</h1>
+            <p>IT教育で世界平和を実現する</p>
+          </div>
+          <img
+            class="main-img"
+            src="images/index/index-main.png"
+            alt="世界平和"
+          />
+        </section>
+        <!-- ミッション -->
+        <section class="mission">
+          <h2>MISSION</h2>
+          <div class="mission-flex">
+            <div class="mission-left">
+              <img
+                class="mission-photo"
+                src="images/index/index-mission.png"
+                alt="屋外のベンチで写真を撮影する多国籍の仲間たち"
+              />
+              <h3>世界平和の実現</h3>
+              <p>
+                人類の悲願である世界平和。世界平和を脅かす様々な社会問題を解決するためには、イノベーションをどんどん起こしていく必要があります。SocialTechは、プログラミング教育を通してイノベーターを輩出することで、世界平和という大きなテーマに挑んでいきます。
+              </p>
+            </div>
+            <div class="mission-right">
+              <img class="s2dgs" src="images/index/s2dgs.png" alt="S2DGs" />
+              <h3>S2DGsの実現</h3>
+              <p>
+                国連が掲げる「Sustainable Development
+                Goals（持続可能な開発目標）」に含まれる17つのグローバル目標のうち、以下の5つの目標の実現をミッションとしてサービスを展開しています。
+              </p>
+              <a href="mission.html">
+                <img src="images/button-more.png" alt="もっとみる" />
+              </a>
+            </div>
+          </div>
+        </section>
+        <!-- プロダクト -->
+        <section class="product">
+          <h2>PRODUCT</h2>
+          <!-- product-main -->
+          <div class="product-main">
+            <!-- product-left -->
+            <div class="product-left">
+              <!-- MAN TO MAN -->
+              <div class="product-left-mantoman">
+                <img
+                  class="product-photo"
+                  src="images/index/index-mantoman.png"
+                  alt="PCでコードを書く男性"
+                />
+                <div class="product-explain">
+                  <span>MAN TO MAN</span>
+                  <h3>プログラミング教育</h3>
+                  <p>
+                    2013年より日本で唯一の専属講師によるマンツーマンのプログラミングレッスンを開始。AI/人工知能やウェブデザインの学習も可能です。
+                  </p>
+                </div>
+              </div>
+              <!-- CAREER -->
+              <div class="product-left-career">
+                <img
+                  class="product-photo"
+                  src="images/index/index-career.png"
+                  alt="CAREER"
+                />
+                <div class="product-explain">
+                  <span>CAREER</span>
+                  <h3>人材紹介事業</h3>
+                  <p>
+                    エンジニアへの転職に特化した履歴書や職務経歴書のアドバイスや面接対策を行い、豊富な求人の中から最適なキャリア選択を支援します。
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- product-right -->
+            <div class="product-right">
+              <!-- MEDIA -->
+              <div class="product-right-media">
+                <img
+                  class="product-photo"
+                  src="images/index/index-media.png"
+                  alt="media"
+                />
+                <div class="product-explain">
+                  <span>MEDIA</span>
+                  <h3>プログラミング学習メディア</h3>
+                  <p>
+                    月間200万人に読まれる日本最大級のプログラミング学習サイト「SocialTech
+                    Blog」やYouTubeチャンネルにて学習情報を発信しています。
+                  </p>
+                </div>
+              </div>
+              <!-- B2b -->
+              <div class="product-right-b2b">
+                <img
+                  class="product-photo"
+                  src="images/index/index-b2b.png"
+                  alt="B2b"
+                />
+                <div class="product-explain">
+                  <span>B2B</span>
+                  <h3>法人研修事業</h3>
+                  <p>
+                    社員のスキルアップ・資格取得・福利厚生を目的としたプログラミング法人研修。貴社の事業モデルに合わせた研修内容の提案を致します。
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <a class="product-more" href="product.html">
+            <img src="images/button-more.png" alt="もっとみる" />
+          </a>
+        </section>
+      </article>
+    </main>
     <section id="aboutus"></section>
   </body>
 </html>
