--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="SocialTechはEdTech業界のリーディングカンパニーを目指します。"
-    />
+    <meta name="description" content="SocialTechはEdTech業界のリーディングカンパニーを目指します。" />
     <link rel="stylesheet" href="style2.css" />
 
     <title>SocialTech</title>
   </head>
   <body>
     <header>
-      <a href="index.html" id="logo"
-        ><img src="images/logo.png" alt="トップページへ" />
-      </a>
+      <a href="index.html" id="logo"><img src="images/logo.png" alt="トップページへ" /> </a>
       <!-- PC用ナビ -->
       <nav class="nav-pc">
         <a href="mission.html">MISSION</a>
@@ -24,6 +19,85 @@
         <a href="index.html#vision">VISION</a>
         <a href="index.html#company">COMPANY</a>
         <a href="index.html#contact">CONTACT</a>
+      </nav>
+      <!-- スマホ用ナビ ボタン-->
+      <img
+        class="menu-sp"
+        src="images/button-menu.png"
+        alt="ナビゲーションを開く"
+        onclick="document.getElementById('nav-sp').style.display = 'block'"
+      />
+      <!-- スマホ用ナビ メニュー-->
+      <nav id="nav-sp">
+        <img
+          class="close"
+          src="images/button-close.png"
+          alt="ナビゲーションを閉じる"
+          onclick="document.getElementById('nav-sp').style.display = 'none'"
+        />
+
+        <a
+          class="logo-sp"
+          href="index.html"
+          onclick="document.getElementById('nav-sp').style.display = 'none'"
+        >
+          <img src="images/logo-sp.png" alt="トップページに戻る" />
+        </a>
+
+        <a
+          class="menu"
+          href="mission.html"
+          onclick="document.getElementById('nav-sp').style.display = 'none'"
+        >
+          MISSION
+        </a>
+        <a
+          class="menu"
+          href="product.html"
+          onclick="document.getElementById('nav-sp').style.display = 'none'"
+        >
+          PRODUCT
+        </a>
+        <a
+          class="menu"
+          href="index.html#aboutus"
+          onclick="document.getElementById('nav-sp').style.display = 'none'"
+        >
+          ABOUT US
+        </a>
+        <a
+          class="menu"
+          href="index.html#vision"
+          onclick="document.getElementById('nav-sp').style.display = 'none'"
+        >
+          VISION
+        </a>
+        <a
+          class="menu"
+          href="index.html#company"
+          onclick="document.getElementById('nav-sp').style.display = 'none'"
+        >
+          COMPANY
+        </a>
+        <a
+          class="menu"
+          href="index.html#contact"
+          onclick="document.getElementById('nav-sp').style.display = 'none'"
+        >
+          CONTACT
+        </a>
+
+        <div class="sns">
+          <a href="https://www.facebook.com/sejuku2013">
+            <img src="images/button-facebook.png" alt="Facebookのリンク" />
+          </a>
+          <a href="https://twitter.com/samuraijuku">
+            <img src="images/button-twitter.png" alt="Twitterのリンク" />
+          </a>
+          <a href="https://www.youtube.com/channel/UCCFOQO5aDK0xXam4cUQXT8g">
+            <img src="images/button-youtube.png" alt="YouTubeのリンク" />
+          </a>
+        </div>
       </nav>
     </header>
     <main>
@@ -34,14 +108,11 @@
             <h1>WORLD PEACE</h1>
             <p>IT教育で世界平和を実現する</p>
           </div>
-          <img
-            class="main-img"
-            src="images/index/index-main.png"
-            alt="世界平和"
-          />
+          <img class="main-img" src="images/index/index-main.png" alt="世界平和" />
         </section>
+
         <!-- ミッション -->
-        <section class="mission">
+        <section id="mission">
           <h2>MISSION</h2>
           <div class="mission-flex">
             <div class="mission-left">
@@ -68,15 +139,16 @@
             </div>
           </div>
         </section>
+
         <!-- プロダクト -->
-        <section class="product">
+        <section id="product">
           <h2>PRODUCT</h2>
           <!-- product-main -->
           <div class="product-main">
             <!-- product-left -->
             <div class="product-left">
               <!-- MAN TO MAN -->
-              <div class="product-left-mantoman">
+              <div class="product-left-element">
                 <img
                   class="product-photo"
                   src="images/index/index-mantoman.png"
@@ -91,12 +163,8 @@
                 </div>
               </div>
               <!-- CAREER -->
-              <div class="product-left-career">
-                <img
-                  class="product-photo"
-                  src="images/index/index-career.png"
-                  alt="CAREER"
-                />
+              <div class="product-left-element">
+                <img class="product-photo" src="images/index/index-career.png" alt="CAREER" />
                 <div class="product-explain">
                   <span>CAREER</span>
                   <h3>人材紹介事業</h3>
@@ -109,12 +177,8 @@
             <!-- product-right -->
             <div class="product-right">
               <!-- MEDIA -->
-              <div class="product-right-media">
-                <img
-                  class="product-photo"
-                  src="images/index/index-media.png"
-                  alt="media"
-                />
+              <div class="product-right-element">
+                <img class="product-photo" src="images/index/index-media.png" alt="media" />
                 <div class="product-explain">
                   <span>MEDIA</span>
                   <h3>プログラミング学習メディア</h3>
@@ -125,15 +189,11 @@
                 </div>
               </div>
               <!-- B2b -->
-              <div class="product-right-b2b">
-                <img
-                  class="product-photo"
-                  src="images/index/index-b2b.png"
-                  alt="B2b"
-                />
+              <div class="product-right-element">
+                <img class="product-photo" src="images/index/index-b2b.png" alt="B2b" />
                 <div class="product-explain">
                   <span>B2B</span>
-                  <h3>法人研修事業</h3>
+                  <h3>法人研修事業！！！</h3>
                   <p>
                     社員のスキルアップ・資格取得・福利厚生を目的としたプログラミング法人研修。貴社の事業モデルに合わせた研修内容の提案を致します。
                   </p>
@@ -145,8 +205,360 @@
             <img src="images/button-more.png" alt="もっとみる" />
           </a>
         </section>
+
+        <!---ABOUT US-->
+        <section id="aboutus">
+          <h2>ABOUT US</h2>
+          <h3>3つの組織文化</h3>
+          <div class="culture-main">
+            <table>
+              <tr>
+                <td>
+                  <span class="culture-num">01</span>
+                </td>
+                <td>
+                  <span class="culture-en">FLEXIBLE</span>
+                  <span class="culture-jp">フレキシブル</span>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <!-- 空のセル -->
+                </td>
+                <td>
+                  <p>
+                    リモートワーク、フルフレックス、複業推奨など1人1人が最大限のパフォーマンスを発揮できる柔軟な働き方を促進しています。
+                  </p>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <span class="culture-num">02</span>
+                </td>
+                <td>
+                  <span class="culture-en">TEAL</span>
+                  <span class="culture-jp">ティール</span>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <!-- 空のセル -->
+                </td>
+                <td>
+                  <p>
+                    会社全体を1つの生命体として捉え、お互いが深く結びついた一階層型
+                    組織として部署・チーム関係なく課題解決をできる組織を目指しています。
+                  </p>
+                </td>
+              </tr>
+
+              <tr>
+                <td>
+                  <span class="culture-num">03</span>
+                </td>
+                <td>
+                  <span class="culture-en">SELF REALIZATION</span>
+                  <span class="culture-jp">自己実現</span>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <!-- 空のセル -->
+                </td>
+                <td>
+                  <p>
+                    クオーター毎に経営・部署・個人ごとにOKRを設定し個人のキャリアと
+                    会社の目指す方向の軌道修正を行っております。
+                  </p>
+                </td>
+              </tr>
+            </table>
+            <img
+              class="culture-img"
+              src="images/index/index-aboutus1.png"
+              alt="笑顔で話し合う2人の女性"
+            />
+          </div>
+
+          <img
+            class="culture-img2"
+            src="images/index/index-aboutus2.png"
+            alt="笑顔で話し合う3人の男女"
+          />
+        </section>
+
+        <!-- VISION -->
+        <section id="vision">
+          <h2>VISION</h2>
+          <h3>7つの行動指針</h3>
+          <div class="vision-main">
+            <div class="vision-box">
+              <img src="images/index/vision-01.png" alt="01" />
+              <span>
+                <h4>CUSTOMER IS BOSS</h4>
+                <h5>あなたのボスは顧客である</h5>
+                <p>
+                  私たちは常にお客様志向で行動し、お客様を喜ばせ、期待値を超えた感動を提供することを大切にします。
+                </p>
+              </span>
+            </div>
+            <div class="vision-box">
+              <img src="images/index/vision-02.png" alt="02" />
+              <span>
+                <h4>MOVE FAST</h4>
+                <h5>早さは価値</h5>
+                <p>素早く試し、素早く実行することで新しい気付きや発見を見つけていきます。</p>
+              </span>
+            </div>
+            <div class="vision-box">
+              <img src="images/index/vision-03.png" alt="03" />
+              <span>
+                <h4>IMPACT DRIVEN</h4>
+                <h5>作業するのは仕事ではない</h5>
+                <p>
+                  問題から考え、成果とは何かを考え続け、インパクトのある成果を生むために仕事をしていきます。
+                </p>
+              </span>
+            </div>
+            <div class="vision-box">
+              <img src="images/index//vision-04.png" alt="04" />
+              <span>
+                <h4>SAVE TIME, SAVE MONEY</h4>
+                <h5>浪費は命取りになる</h5>
+                <p>
+                  少ないコストでできる方法を考えます。お金だけでなく、人の時間をいただいている自覚を持ち、あらゆるリソースを有意義に活用します。
+                </p>
+              </span>
+            </div>
+            <div class="vision-box">
+              <img src="images/index/vision-05.png" alt="05" />
+              <span>
+                <h4>BE GENTLE</h4>
+                <h5>「優しくない」をなくす</h5>
+                <p>
+                  社会をすこしずつ優しくしていきます。自分、家族、同僚、顧客、他人、全ての人に優しくいることを心がけます。
+                </p>
+              </span>
+            </div>
+            <div class="vision-box">
+              <img src="images/index/vision-06.png" alt="06" />
+              <span>
+                <h4>ABC</h4>
+                <h5>当たり前の事をバカにせずにちゃんとやる</h5>
+                <p>
+                  礼儀、健康、嘘をつかない。当たり前の事が出来ているかを常に自問し、当たり前の基準を高く持って行動します。
+                </p>
+              </span>
+            </div>
+            <div class="vision-box">
+              <img src="images/index/vision-07.png" alt="07" />
+              <span>
+                <h4>ZTI</h4>
+                <h5>絶対的当事者意識</h5>
+                <p>
+                  役職や役割に応じた相対的な当事者意識ではなく、自身の身で起こることすべてに対する絶対的な当事者意識を持ちます。
+                </p>
+              </span>
+            </div>
+          </div>
+        </section>
+
+        <section id="company">
+          <h2>COMPANY</h2>
+          <h3>会社概要</h3>
+          <table>
+            <tr>
+              <th class="tableheader-first">会社名</th>
+              <td class="cell-first">株式会社SocialTech</td>
+            </tr>
+            <tr>
+              <th>所在地</th>
+              <td>
+                〒150-0043 東京都渋谷区道玄坂2丁目11-1 Gスクエア渋谷道玄坂4F<br />JR山手線「渋谷駅」より徒歩3分
+              </td>
+            </tr>
+            <tr>
+              <th>代表者</th>
+              <td>代表取締役 田中 太郎</td>
+            </tr>
+            <tr>
+              <th>設立</th>
+              <td>2015年3月19日</td>
+            </tr>
+          </table>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.7759544892483!2d139.69399665123464!3d35.65789123876098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188caa0042e8d1%3A0xba130bea826a7aa2!2z44CSMTUwLTAwNDMg5p2x5Lqs6YO95riL6LC35Yy66YGT546E5Z2C77yS5LiB55uu77yR77yR4oiS77yR!5e0!3m2!1sja!2sjp!4v1636872991912!5m2!1sja!2sjp"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+          >
+          </iframe>
+        </section>
+
+        <section id="contact">
+          <h2>CONTACT</h2>
+          <h3>お問い合わせ</h3>
+
+          <!-- STATIC FORMS -->
+          <form action="https://api.staticforms.xyz/submit" method="post">
+            <input type="text" name="honeypot" style="display: none" />
+            <input type="hidden" name="accessKey" value="2a086c99-2085-4657-b5b7-ff2576e4d565" />
+            <input type="hidden" name="subject" value="Webサイトからお問い合わせがありました" />
+            <input type="hidden" name="replyTo" value="" />
+            <input type="hidden" name="redirectTo" value="" />
+            <!-- STATIC FORMS終了 -->
+
+            <div class="form-item">
+              <div class="contact-heading">
+                <label>
+                  お名前
+                  <span>必須</span>
+                </label>
+              </div>
+              <div class="contact-form">
+                <input class="contact-textbox" type="text" name="name" placeholder="入力してください" />
+              </div>
+            </div>
+
+            <div class="form-item">
+              <div class="contact-heading">
+                <label>
+                  フリガナ
+                  <span>必須</span>
+                </label>
+              </div>
+              <div class="contact-form">
+                <input
+                  class="contact-textbox"
+                  type="text"
+                  name="hurigana"
+                  placeholder="入力してください"
+                />
+              </div>
+            </div>
+
+            <div class="form-item">
+              <div class="contact-heading">
+                <label>
+                  メールアドレス
+                  <span>必須</span>
+                </label>
+              </div>
+              <div class="contact-form">
+                <input class="contact-textbox" type="text" name="email" placeholder="入力してください" />
+              </div>
+            </div>
+
+            <div class="form-item">
+              <div class="contact-heading">
+                <label> 電話番号 </label>
+                <span>必須</span>
+              </div>
+              <div class="contact-form">
+                <input class="contact-textbox" type="text" name="tel" placeholder="入力してください" />
+              </div>
+            </div>
+
+            <div class="form-item">
+              <div class="contact-heading">
+                <label>お問い合わせ内容</label>
+              </div>
+              <div class="contact-form">
+                <textarea
+                  class="contact-texarea"
+                  name="message"
+                  placeholder="入力してください"
+                ></textarea>
+              </div>
+            </div>
+
+            <div class="form-item">
+              <div class="contact-heading">
+                <label>ご希望の連絡先</label>
+                <span>必須</span>
+              </div>
+              <div class="contact-form">
+                <input class="radiobutton" type="radio" name="contact" value="tel" checked />
+                <label>お電話</label>
+
+                <input class="radiobutton" type="radio" name="contact" value="mail" />
+                <label>メール</label>
+
+                <input class="radiobutton" type="radio" name="contact" value="both" />
+                <label>どちらでも</label>
+              </div>
+            </div>
+
+            <div class="form-item">
+              <div class="contact-heading">
+                <label>個人情報の取り扱い</label>
+              </div>
+              <div class="contact-form">
+                <details>
+                  <summary>お問い合わせフォームの個人情報の取り扱いについて</summary>
+                  <div class="personal-info">
+                    <span>１．組織の名称又は氏名</span><br />
+                    株式会社SocialTech<br /><br />
+                    <span
+                      >２．個人情報保護管理者（若しくはその代理人）の氏名又は職名、所属及び連絡先 鈴木
+                      一郎 コーポレート部</span
+                    ><br />
+                    メールアドレス：support@socialtech.net<br />
+                    TEL：03-xxxx-xxxx<br />
+                    <span>３．個人情報の利用目的</span><br />
+                    ・本サービス及び本サービスに関連する情報の提供又はそれらに関する連絡のため<br />
+                    ・ユーザーの本人確認のため<br />
+                    ・当社サービスのご案内のため<br />
+                    ・当社の商品等の広告または宣伝（電子メールによるものを含むものとします。）<br /><br />
+                    <span>４．個人情報の取り扱い業務の委託</span><br />
+                    個人情報の取扱業務の全部または一部を外部に業務委託する場合があります。<br />
+                    その際、弊社は、個人情報を適切に保護できる管理体制を敷き実行していることを条件として<br />
+                    委託先を厳選したうえで、機密保持契約を委託先と締結し、お客様の個人情報を厳密に管理させます。<br /><br />
+                    <span>５．個人情報の開示等の請求</span><br />
+                    お客様は、弊社に対してご自身の個人情報の開示等（利用目的の通知、開示、内容の訂正・追加・削除、利用の停止または消去、第三者への提供の停止）に関して、当社問合わせ窓口に申し出ることができます。<br />
+                    その際、弊社はお客様ご本人を確認させていただいたうえで、合理的な期間内に対応いたします。<br /><br />
+                    なお、個人情報に関する弊社問合わせ先は、次の通りです。<br /><br />
+                    株式会社SocialTech　個人情報問合せ窓口<br />
+                    〒150-0043　東京都渋谷区道玄坂2丁目11-1 Ｇスクエア渋谷道玄坂 4F<br />
+                    メールアドレス：support@socialtech.net　TEL：03-xxxx-xxxx<br /><br />
+                    <span>６．個人情報を提供されることの任意性について</span><br /><br />
+                    お客様がご自身の個人情報を弊社に提供されるか否かは、お客様のご判断によりますが、もしご提供されない場合には、適切なサービスが提供できない場合がありますので予めご了承ください。
+                  </div>
+                </details>
+                <input type="checkbox" name="agree" />
+                <span>個人情報の取り扱いについてご同意いただける場合は、チェックをしてください。</span>
+              </div>
+            </div>
+            <input type="submit" src="images/button-submit.png" alt="送信する" />
+          </form>
+        </section>
       </article>
     </main>
-    <section id="aboutus"></section>
+
+    <footer>
+      <div class="footer-logo">
+        <img src="images/logo-sp.png" alt="SocialTech" />
+      </div>
+      <div class="footer-link">
+        <a href="mission.html">MISSION</a>
+        <a href="product.html">PRODUCT</a>
+        <a href="index.html#aboutus">ABOUT US</a>
+        <a href="index.html#vision">VISION</a>
+        <a href="index.html#company">COMPANY</a>
+        <a href="index.html#contact">CONTACT</a>
+      </div>
+      <div class="sns-footer">
+        <a href="https://www.facebook.com/sejuku2013"
+          ><img src="images/button-facebook.png" alt="Facebookのリンク"
+        /></a>
+        <a href="https://twitter.com/samuraijuku"
+          ><img src="images/button-twitter.png" alt="Twitterのリンク"
+        /></a>
+        <a href="https://www.youtube.com/channel/UCCFOQO5aDK0xXam4cUQXT8g"
+          ><img src="images/button-youtube.png" alt="YouTubeのリンク"
+        /></a>
+        <span class="copyright">&copy;2021 SocialTech, Inc. All Rights Reserved. </span>
+      </div>
+    </footer>
   </body>
 </html>
